--- a/blog_frontend/index.html
+++ b/blog_frontend/index.html
@@ -16,37 +16,40 @@
         <p class="lead">Please feel free to leave what's on your mind</p>
         <hr class="my-4">
         <p>Click on NEW BLOG to get started.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Create Blog</a>
+        <a class="btn btn-primary btn-lg createBlogBtn" href="#" role="button">Create Blog</a>
       </div>
   </div>
 
 
-    <!-- <div class="container">
+    <div class="container">
       <div class="row">
         <div class="col-9">
           <div class="row">
             <div class="col-4">
-              <div class="list-group" id="list-tab" role="tablist">
-                <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Home</a>
-                <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Profile</a>
-                <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
-                <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
+              <div class="list-group" id="listTab" role="tablist">
+                <a class="list-group-item list-group-item-action active" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Home</a>
+                <a class="list-group-item list-group-item-action"  data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Profile</a>
+                <a class="list-group-item list-group-item-action"  data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
+                <a class="list-group-item list-group-item-action"  data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
               </div>
             </div>
-            <div class="col-8">
-              <div class="tab-content" id="nav-tabContent">
-                <! <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">Dapibus ac facilisis in</div>
+            <div class="col-8 mainContent">
+
+              <div class="tab-content" id="navtabContent">
+                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">Dapibus ac facilisis in</div>
                 <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">Dapibus ac facilisis in</div>
-                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">.Dapibus ac facilisis in..</div>
-                <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">..Dapibus ac facilisis in</div> -->
-              <!-- </div>
+                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">Lorum Hupper Ipsum whats some hu</div>
+                <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">tesxt area 4 here</div>
+              </div>
             </div>
           </div>
 
 
 
 
-        </div> -->
+        </div>
+      </div>
+    </div>
         <!-- <div class="col-4">
           <ul class="list-group">
             <li class="list-group-item active">Cras justo odio</li>
@@ -57,7 +60,7 @@
           </ul>
         </div> -->
         <div class="col-6">
-          <form class="newBlog" >
+          <!-- <form class="newBlog">
             <div class="form-group" >
               <label for="formTitle">Title</label>
               <input type="text" class="form-control" id="title" placeholder="blog title">
@@ -67,7 +70,7 @@
               <textarea class="form-control" id="content" rows="3"></textarea>
               <button type="submit" class="btn btn-large submit">Create New Post</button>
             </div>
-          </form>
+          </form> -->
         </div>
       </div>
     </div>
