--- a/blog_frontend/index.html
+++ b/blog_frontend/index.html
@@ -26,20 +26,17 @@
         <div class="col-9">
           <div class="row">
             <div class="col-4">
-              <div class="list-group" id="listTab" role="tablist">
-                <a class="list-group-item list-group-item-action active" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Home</a>
-                <a class="list-group-item list-group-item-action"  data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Profile</a>
-                <a class="list-group-item list-group-item-action"  data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
-                <a class="list-group-item list-group-item-action"  data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
+              <div class="list-group sideBar" id="list-tab" role="tablist">
+
+
               </div>
             </div>
             <div class="col-8 mainContent">
 
-              <div class="tab-content" id="navtabContent">
-                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">Dapibus ac facilisis in</div>
-                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">Dapibus ac facilisis in</div>
-                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">Lorum Hupper Ipsum whats some hu</div>
-                <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">tesxt area 4 here</div>
+              <div class="tab-content tabContent" id="nav-tabContent">
+
+
+                <div class="btnHolder"></div>
               </div>
             </div>
           </div>
@@ -50,27 +47,9 @@
         </div>
       </div>
     </div>
-        <!-- <div class="col-4">
-          <ul class="list-group">
-            <li class="list-group-item active">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-            <li class="list-group-item">Vestibulum at eros</li>
-          </ul>
-        </div> -->
+
         <div class="col-6">
-          <!-- <form class="newBlog">
-            <div class="form-group" >
-              <label for="formTitle">Title</label>
-              <input type="text" class="form-control" id="title" placeholder="blog title">
-            </div>
-            <div class="form-group">
-              <label for="blogContent">Content</label>
-              <textarea class="form-control" id="content" rows="3"></textarea>
-              <button type="submit" class="btn btn-large submit">Create New Post</button>
-            </div>
-          </form> -->
+
         </div>
       </div>
     </div>
